--- a/wp-content/plugins/brooklyn-ai-planner/composer.json
+++ b/wp-content/plugins/brooklyn-ai-planner/composer.json
@@ -35,7 +35,7 @@
 	},
 	"scripts": {
 		"test": "vendor/bin/phpunit",
-		"lint:php": "php -d memory_limit=512M vendor/bin/phpcs --standard=WordPress-Core brooklyn-ai-planner.php includes admin tests/phpunit",
+		"lint:php": "php -d memory_limit=512M vendor/bin/phpcs",
 		"stan": "vendor/bin/phpstan --memory-limit=512M analyse"
 	}
 }
