feat: Analytics tracking & reporting dashboard
- Add Reports admin page with itinerary, website, phone, directions stats
- Add get_analytics_stats RPC for Supabase reporting queries
- Fix Analytics Logger: convert empty venue_id to null (prevents UUID error)
- Fix Engine: include venue 'id' in VENUE_SELECT_FIELDS for click tracking
- Fix REST events endpoint: proper nonce verification with X-WP-Nonce header
- Add CA cert bundle for Pinecone SSL, enable SSL verification by default
- Update banner styling: #1649FF background with gray gradient

--- a/wp-content/plugins/brooklyn-ai-planner/composer.json
+++ b/wp-content/plugins/brooklyn-ai-planner/composer.json
@@ -36,6 +36,6 @@
 	"scripts": {
 		"test": "vendor/bin/phpunit",
 		"lint:php": "php -d memory_limit=512M vendor/bin/phpcs",
-		"stan": "vendor/bin/phpstan --memory-limit=512M analyse"
+		"stan": "vendor/bin/phpstan --memory-limit=1G analyse"
 	}
 }
